--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -9,6 +9,7 @@ tasks:
   default:
     cmds:
       - echo "{{.GREETING}}"
+      - task -a
     silent: true
     
   build:
@@ -16,3 +17,30 @@ tasks:
     cmds:
     - mkdir -p release/
     - cp -r devpod release/devpod
+    
+  post-build-stamp:
+    desc: _
+    vars:
+      base_file_url: https://raw.githubusercontent.com/yairdar/devpod/main/devpod
+      # items_expr: ls -1 release/devpod | sed "s@^@{{.base_file_url}}/@"
+      items:
+        sh: ls -1 release/devpod
+    cmds:
+    - |-
+      cat << FQD > init.sh
+      #!/usr/bin/env sh
+
+      get_one_it () {
+        echo  rm -f \$1
+        echo  wget {{.base_file_url}}/\$1
+        echo  "done \$1"
+      }
+      export -f get_one_it   
+            
+      mkdir -p devpod
+      pushd devpod
+      
+      xargs -P 4 -I{} bash -c 'get_one_it {}' << FHJ
+      {{.items}}
+      FHJ
+      FQD
