--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -45,7 +45,7 @@ tasks:
       MRK_XRGS
 
       chmod +x *.*
-      ehco 'made file executables'
+      echo 'made file executables'
       MRK_CAT
   
   init-from-gitub-latest:
