--- a/src/devpod/setup.cloud.tools.yml
+++ b/src/devpod/setup.cloud.tools.yml
@@ -1,6 +1,12 @@
 version: "3"
 tasks:
 
+  install-all:
+    desc: install cloud tools gh cli, aws cli etc
+    cmds:
+    - task: install-aws-cli
+    - task: install-gh-cli
+
   install-aws-cli:
     desc: _
     dir: __tmp__
@@ -20,11 +26,9 @@ tasks:
         sudo mv gh_2.5.1_linux_amd64/bin/gh /usr/local/bin/
 
   # install-aws-vault:
-  #   desc: _
-  #   dir:
-  #   cmds:
-  #     - |-
-        
+  # install-argocli:
+  # install-kubetcl:
+
         
   
   
