--- a/src/devpod/setup.zsh.tools.yml
+++ b/src/devpod/setup.zsh.tools.yml
@@ -5,9 +5,9 @@
 version: "3"
 
 vars:
-  MAYBE_`: 
+  MAYBE_SUDO: 
     sh: which sudo &> /dev/null && echo "sudo" || echo ""
-
+    
 tasks:
 
   install-all:
@@ -35,12 +35,31 @@ tasks:
       - sed -i 's/.*ZSH_THEME=.*/ZSH_THEME="bureau"/' ~/.zshrc
       - sed -i 's/.*DISABLE_UPDATE_PROMPT=.*/DISABLE_UPDATE_PROMPT=true/' ~/.zshrc
       - sed -i 's/.*DISABLE_AUTO_UPDATE=.*/DISABLE_AUTO_UPDATE=true/' ~/.zshrc
-
+      
   install-task-completion:
+    desc: ""
+    cmds:
+    - |-
+      echo "Checking if python3 is installed before trying to install zsh task completion.
+      Without python3 zsh task completion will not be installed."
+    - task: install-task-completion-check-python
+    
+  install-task-completion-check-python:
+    desc: "check if python is installed, and if yes, install task completion"
+    vars:
+      PYTHON_INSTALLED:
+        sh: which python3 &> /dev/null && echo "yes" || echo "no"
+    status:
+      - test {{.PYTHON_INSTALLED}} = no
+    cmds:
+      - |-
+        echo "python3 is installed. Installing zsh task completion"
+      - task: install-task-completion-now
+  
+  install-task-completion-now:
     desc: "install taskgo completions for taskfiles"
     status:
-    - test -e ${ZSH_CUSTOM:=~/.oh-my-zsh/custom}/plugins/task
-    
+      - test -e ${ZSH_CUSTOM:=~/.oh-my-zsh/custom}/plugins/task
     cmds:
       - git clone https://github.com/sawadashota/go-task-completions.git ${ZSH_CUSTOM:=~/.oh-my-zsh/custom}/plugins/task || true
       - |-
