--- a/tests/test-before-push/Dockerfile_with_python
+++ b/tests/test-before-push/Dockerfile_with_python
@@ -5,7 +5,7 @@ ENV IN_DOCKER 1
 # copy The Sequence scripts to the container
 COPY devpod /devpod
 
-# install python3 to avoid error with config-zsh task
+# install python3 to test install-task-completion in setup.zsh.tools.yml
 RUN apt update && apt install -y python3
 
 # run The Sequence to test it
