--- a/tests/test-after-merge/Dockerfile_with_python
+++ b/tests/test-after-merge/Dockerfile_with_python
@@ -11,10 +11,8 @@ RUN apt update && apt install -y python3
 # run Quick Install on src folder
 RUN echo "Test after merge with main branch. Running Quick Install on src folder"
 RUN echo "Inititalize $(pwd) with devpod"
-RUN echo "This will create directory `gitpod`, run this from your repo root so `gitpod` became 1 level dir."
+RUN echo "This will create directory `devpod`, run this from your repo root so `devpod` became 1 level dir."
 RUN wget -q -O - https://github.com/yairdar/devpod/blob/main/tests/test-after-merge/init.sh | bash
 
 RUN echo "run setup idempotent process, only missing tools will be installed"
 RUN bash devpod/install-deps.sh install-all
-
-
