--- a/tests/test-before-push/Taskfile.yml
+++ b/tests/test-before-push/Taskfile.yml
@@ -12,13 +12,13 @@ tasks:
       - task -a
     silent: true
 
-  test-udb-simple:
+  test-ubuntu-docker-build-simple:
     desc: Test of src in Ubuntu docker container using Dockerfile build, simple case
     dir: ../..
     cmds:
     - docker build -f tests/test-before-push/Dockerfile_no_python src
   
-  test-udb-with-python:
+  test-ubuntu-docker-build-with-python:
     desc: Test of src in Ubuntu docker container using Dockerfile build with python
     dir: ../..
     cmds:
