--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -24,6 +24,11 @@ tasks:
     - task post-build-stamp
     - chmod +x src/devpod/*.sh
     - chmod +x src/devpod/*.yml
+
+  test:
+    desc: run tests
+    cmds:
+    - task -d tests run-tests -o prefixed
         
   post-build-stamp:
     desc: _
