--- a/src/devpod/setup.cloud.tools.yml
+++ b/src/devpod/setup.cloud.tools.yml
@@ -10,6 +10,8 @@ tasks:
   install-aws-cli:
     desc: _
     dir: __tmp__
+    status:
+      - aws --version | grep 'aws-cli/2'
     cmds:
       - |-
         curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
