--- a/devpod/setup.cloud.tools.yml
+++ b/devpod/setup.cloud.tools.yml
@@ -16,7 +16,7 @@ tasks:
       - |-
         curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
         unzip awscliv2.zip
-        sudo ./aws/install
+        sudo ./aws/install --update
 
   install-gh-cli:
     desc: _
