--- a/tests/Taskfile.yml
+++ b/tests/Taskfile.yml
@@ -21,6 +21,7 @@ tasks:
     deps:
     - test-before-push:test-ubuntu-docker-build-simple
     - test-before-push:test-ubuntu-docker-build-with-python
+    - test-before-push:test-ubuntu-docker-build-min
 
   run-tests:
     desc: _
