--- a/tests/test-before-push/Taskfile.yml
+++ b/tests/test-before-push/Taskfile.yml
@@ -24,8 +24,8 @@ tasks:
     cmds:
     - docker build -f tests/test-before-push/Dockerfile_with_python src
 
-  test-ubuntu-docker-build-min:
-    desc: Test of src in Ubuntu docker container using Dockerfile build, simple case
+  test-ubuntu-docker-setup-args:
+    desc: Test of src in Ubuntu docker container setup all with base-setup args
     dir: ../..
     cmds:
-    - docker build -f tests/test-before-push/Dockerfile_install_min src
+    - docker build -f tests/test-before-push/Dockerfile_setup_args src
