Add install-min option to install-deps.sh (#12)
* Add install-min option to install-deps.sh

* Try to fix conditional in bash

* Try to fix conditional in bash

* Add a test for install-min option in install-deps.sh

* Update README

* install-deps.sh setup-base taskname

* Fix typo

Co-authored-by: djfedos <djfedos@djfedos.com>

--- a/tests/test-before-push/Taskfile.yml
+++ b/tests/test-before-push/Taskfile.yml
@@ -23,3 +23,9 @@ tasks:
     dir: ../..
     cmds:
     - docker build -f tests/test-before-push/Dockerfile_with_python src
+
+  test-ubuntu-docker-setup-args:
+    desc: Test of src in Ubuntu docker container setup all with base-setup args
+    dir: ../..
+    cmds:
+    - docker build -f tests/test-before-push/Dockerfile_setup_args src
